First round of polishing for Lists chapter

--- a/Exercises/Design/DsgnMCQdctnrycpbl.html
+++ b/Exercises/Design/DsgnMCQdctnrycpbl.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Design Exercise: ADT</title>
+  <title>Design Exercise:  Dictionary capability </title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises-new/khan-exercise.js"></script>
 </head>
 
-
 <body>
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">Which is an example of a composite type? </p>
-      <div class="solution"><var>"A bank record"</var></div>
+      <p class="question"> Which of the following is <b>not</b> one of
+	the fundamental capabilities of a dictionary?</p>
+      <div class="solution"><var>"traverse"</var></div>
       <ul class="choices">
-	<li><var>"An integer"</var> </li>
-	<li><var>"A floating point number"</var></li>
-   
+	<li><var>"search"</var> </li>
+	<li><var>"insert"</var></li>
+        <li><var>"delete"</var></li>
       </ul>
-	  <div class="hints">
-	   </div>
+      <div class="hints">
+      </div>
     </div> 
-
   </div>
 </div>
 </body>
