--- a/Exercises/Design/DsgnMCQdsgnptrn.html
+++ b/Exercises/Design/DsgnMCQdsgnptrn.html
@@ -7,24 +7,22 @@
   <script src="../../ODSAkhan-exercises-new/khan-exercise.js"></script>
 </head>
 
-
-
 <body>
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question"> Which of the following is <b>not</b> an example of a design pattern presented in this chapter? </p>
+      <p class="question"> Which of the following is <b>not</b> an
+      example of a design pattern presented in this chapter? </p>
       <div class="solution"><var>"Decomposition"</var></div>
       <ul class="choices">
-	<li><var>"Flyweight."</var> </li>
-	<li><var>"Strategy."</var></li>
-        <li><var>"Composite."</var></li>
-        <li><var>"Visitor."</var></li>
+	<li><var>"Flyweight"</var> </li>
+	<li><var>"Strategy"</var></li>
+        <li><var>"Composite"</var></li>
+        <li><var>"Visitor"</var></li>
       </ul>
-	  <div class="hints">
-	   </div>
+      <div class="hints">
+      </div>
     </div> 
-
   </div>
 </div>
 </body>
