--- a/Exercises/Design/DsgnMCQdsgnptrncmpst.html
+++ b/Exercises/Design/DsgnMCQdsgnptrncmpst.html
@@ -7,25 +7,20 @@
   <script src="../../ODSAkhan-exercises-new/khan-exercise.js"></script>
 </head>
 
-
-
-
 <body>
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question"> The composite design pattern is most appropriate when:</p>
-      <div class="solution"><var>" We are likely to modify the program to add new object types, but the basic operations stay the same."</var></div>
+      <p class="question"> The composite design pattern is most
+      appropriate when:</p>
+      <div class="solution"><var>"We are likely to modify the program to add new object types, but the basic operations stay the same."</var></div>
       <ul class="choices">
 	<li><var>"We are likely to modify the program to add new operations, but the basic object types stay the same."</var> </li>
 	<li><var>"We need to encapulate and make interchangeable a set of alternative actions that might be performed as part of some larger activity."</var></li>
-
-
       </ul>
-	  <div class="hints">
-	   </div>
+      <div class="hints">
+      </div>
     </div> 
-
   </div>
 </div>
 </body>
