--- a/Exercises/Design/DsgnMCQdsgnptrndf.html
+++ b/Exercises/Design/DsgnMCQdsgnptrndf.html
@@ -7,25 +7,20 @@
   <script src="../../ODSAkhan-exercises-new/khan-exercise.js"></script>
 </head>
 
-
-
-
 <body>
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="question"> A design pattern:</p>
-      <div class="solution"><var>"embodies and generalized important design concepts for a recurring problem."</var></div>
+      <div class="solution"><var>"embodies and generalizes important design concepts for a recurring problem."</var></div>
       <ul class="choices">
 	<li><var>"is a unique solution to a particular programming problem."</var> </li>
 	<li><var>"is an efficient approach to solving a specialize task."</var></li>
         <li><var>"A prototype implementation that serves as a starting point for a large project."</var></li>
-
       </ul>
-	  <div class="hints">
-	   </div>
+      <div class="hints">
+      </div>
     </div> 
-
   </div>
 </div>
 </body>
