--- a/Exercises/Design/DsgnMCQflyprp.html
+++ b/Exercises/Design/DsgnMCQflyprp.html
@@ -1,31 +1,27 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Design Exercise: ADT </title>
+  <title>Design Exercise: Flyweight Property </title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises-new/khan-exercise.js"></script>
 </head>
 
-
-
-
 <body>
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question"> An ADT is a form of: </p>
-      <div class="solution"><var>"Abstraction"</var></div>
+      <p class="question"> Which of these is <b>not</b> a defining
+	property of a flyweight?</p>
+      <div class="solution"><var>"It is small"</var></div>
       <ul class="choices">
-	<li><var>" Metaphor."</var> </li>
-	<li><var>"Simile."</var></li>
-        <li><var>" Programming."</var></li>
-        <li><var>"Design."</var></li>
+	<li><var>"It is stateless"</var> </li>
+	<li><var>"It is a singleton"</var></li>
+        <li><var>"It is reused"</var></li>
       </ul>
-	  <div class="hints">
-	   </div>
+      <div class="hints">
+      </div>
     </div> 
-
   </div>
 </div>
 </body>
