--- a/Exercises/Design/DsgnTFdictlst.html
+++ b/Exercises/Design/DsgnTFdictlst.html
@@ -5,25 +5,21 @@
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises-new/khan-exercise.js"></script>
-  <script src="../../JSAV/build/JSAV-min.js"></script>
-  <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
 </head>
-
 
 <body>
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="problem">Answer TRUE or FALSE.
-      <p class="question">
-      The problem with using a list to implement a dictionary is that, while search and insert can be implemented efficiently, deletion cannot.</p>
-      <div class="solution"><var>"False"</var></div>
+      <p class="question">A list can be used to implement a
+      dictionary.</p>
+      <div class="solution"><var>"True"</var></div>
       <ul class="choices" data-category="true">
 	<li><var>"True"</var></li>
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-	
       </div>
     </div>
   </div>
