--- a/Exercises/Design/DsgnTFdictlstprb.html
+++ b/Exercises/Design/DsgnTFdictlstprb.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Design Exercise: Efficient Dictionary Implementation</title>
+  <title>Design Exercise: List </title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises-new/khan-exercise.js"></script>
-  <script src="../../JSAV/build/JSAV-min.js"></script>
-  <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
 </head>
 
 <body>
@@ -14,15 +12,15 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="problem">Answer TRUE or FALSE.
-      <p class="question">
-       To be efficient, a dictionary implementation requires that the key type define a total order.</p>
-      <div class="solution"><var>"True"</var></div>
+      <p class="question">The problem with using a list to implement a
+	dictionary is that, while search and insert can be implemented
+	efficiently, deletion cannot.</p>
+      <div class="solution"><var>"False"</var></div>
       <ul class="choices" data-category="true">
 	<li><var>"True"</var></li>
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-	
       </div>
     </div>
   </div>
