--- a/Exercises/Design/DsgnMCQadtfrm.html
+++ b/Exercises/Design/DsgnMCQadtfrm.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Design Exercise:  Dictionary capability </title>
+  <title>Design Exercise: ADT </title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises-new/khan-exercise.js"></script>
 </head>
 
-
 <body>
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question"> Which of the following is <b>not</b> one of the fundamental capabilities of a dictionary?</p>
-      <div class="solution"><var>"traversal."</var></div>
+      <p class="question"> An ADT is a form of: </p>
+      <div class="solution"><var>"Abstraction"</var></div>
       <ul class="choices">
-	<li><var>"search."</var> </li>
-	<li><var>"insert."</var></li>
-        <li><var>"delete."</var></li>
-
+	<li><var>" Metaphor."</var> </li>
+	<li><var>"Simile."</var></li>
+        <li><var>" Programming."</var></li>
+        <li><var>"Design."</var></li>
       </ul>
-	  <div class="hints">
-	   </div>
+      <div class="hints">
+      </div>
     </div> 
-
   </div>
 </div>
 </body>
