--- a/Exercises/Design/DsgnMCQdctnry.html
+++ b/Exercises/Design/DsgnMCQdctnry.html
@@ -1,32 +1,26 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Design Exercise: Flyweight Property </title>
+  <title>Design Exercise:  Dictionary</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises-new/khan-exercise.js"></script>
 </head>
 
-
-
-
-
 <body>
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question"> Which of these is <b>not</b> a defining property of a flyweight?</p>
-      <div class="solution"><var>"It is small."</var></div>
+      <p class="question"> A dictionary is:</p>
+      <div class="solution"><var>"An ADT"</var></div>
       <ul class="choices">
-	<li><var>"It is stateless."</var> </li>
-	<li><var>"It is a singleton."</var></li>
-        <li><var>"It is reused."</var></li>
-
+	<li><var>"An implementation"</var> </li>
+	<li><var>"A data structure"</var></li>
+        <li><var>"A type"</var></li>
       </ul>
-	  <div class="hints">
-	   </div>
+      <div class="hints">
+      </div>
     </div> 
-
   </div>
 </div>
 </body>
