--- a/Exercises/Design/DsgnMCQds.html
+++ b/Exercises/Design/DsgnMCQds.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Design Exercise:  Dictionary</title>
+  <title>Design Exercise: Data Structure</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises-new/khan-exercise.js"></script>
 </head>
 
-
-
 <body>
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question"> A dictionary is</p>
-      <div class="solution"><var>"An ADT"</var></div>
+      <p class="question"> A data structure is: </p>
+      <div class="solution"><var>"The implementation for an ADT."</var></div>
       <ul class="choices">
-	<li><var>"An implementation."</var> </li>
-	<li><var>" A data structure."</var></li>
+	<li><var>" A specification for an implementation."</var> </li>
+	<li><var>"A collection of values."</var></li>
         <li><var>" A type."</var></li>
-
+        <li><var>"Another name for an ADT"</var></li>
       </ul>
-	  <div class="hints">
-	   </div>
+      <div class="hints">
+      </div>
     </div> 
-
   </div>
 </div>
 </body>
