--- a/Exercises/Design/DsgnTFdictlsty.html
+++ b/Exercises/Design/DsgnTFdictlsty.html
@@ -5,8 +5,6 @@
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises-new/khan-exercise.js"></script>
-  <script src="../../JSAV/build/JSAV-min.js"></script>
-  <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
 </head>
 
 <body>
@@ -14,15 +12,15 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="problem">Answer TRUE or FALSE.
-      <p class="question">
-       A list can be used to implement a dictionary.</p>
-      <div class="solution"><var>"True"</var></div>
+      <p class="question">The list is an efficient data structure to
+	use to implement a dictionary because we can make both of the
+	key operations (insert and search) efficient.</p>
+      <div class="solution"><var>"False"</var></div>
       <ul class="choices" data-category="true">
 	<li><var>"True"</var></li>
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-	
       </div>
     </div>
   </div>
