Changed the instructions for rotation exercise.

--- a/AV/Development/rotation-proficiency.html
+++ b/AV/Development/rotation-proficiency.html
@@ -18,7 +18,7 @@
         <div id="jsavcontainer">
             <p class="instructLabel">Instructions:</p>
             <p class="instructions">
-                    Begin the rotation by selecting the unbalanced node. This will separate the unbalanced subtree from the main tree. Continue by changing the references in the right order, so that the tree will become balanced.
+                    Begin the rotation by selecting the <strong>lowest</strong> unbalanced node. This will separate the unbalanced subtree from the main tree. Continue by putting the nodes back in the right order, thereby balancing the tree.
             </p>
             <p align="center" class="jsavexercisecontrols"></p>
         </div>
