Changed CSS layout for Radix Exchange Sort exercise.

--- a/AV/Development/radixExchangeSort.html
+++ b/AV/Development/radixExchangeSort.html
@@ -7,9 +7,6 @@
         <!-- <link rel="stylesheet" href="opendsaAV.css" type="text/css" /> -->
         <link rel="stylesheet" href="proficiency.css" type="text/css" />
 
-    </head>
-
-    <body>
         <style>
           .jsavnode {
             cursor: pointer;
@@ -24,12 +21,16 @@
             font-size: 100%;
           }
           span.bit {
-            color: #ccc;
+            color: #666;
           }
           span.bit.coloredbit {
             color: #000 !important;
+            font-weight: bold;
           }
         </style>
+    </head>
+
+    <body>
         <h1>Radix Exchange Sort</h1>
         <div id="jsavcontainer">
             <p class="instructLabel">Instructions:</p>
