--- a/AV/Development/binarySearch.html
+++ b/AV/Development/binarySearch.html
@@ -5,35 +5,19 @@
         <title>Binary Search</title>
         <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
         <!-- <link rel="stylesheet" href="opendsaAV.css" type="text/css" /> -->
+        <link rel="stylesheet" href="proficiency.css" type="text/css" />
+        <style>
+          .jsavautoresize .jsavnode {  
+            width: auto;
+            min-width: 36px;
+            height: auto;
+            min-height: 36px;
+            line-height: 36px;
+          }
+        </style>
     </head>
 
     <body>
-        <style>
-          #jsavcontainer {
-            width: 800px;
-            height: 650px;
-            background-color: #fff;
-          }
-          .jsavautoresize .jsavnode {  
-            width: auto;
-            min-width: 39px;
-            height: auto;
-            min-height: 39px;
-            line-height: 39px;
-          }
-          p.instructLabel {
-            margin-top: -5px;
-          }
-          p.instructions {
-            margin-top: -15px;
-            padding: 10px;
-            margin-right: 10px;
-            border: 1px solid black;
-          }
-          .greybackground, .greybackground .jsavvalue, .jsavarray.jsavbararray .jsavindex.greybackground .jsavvalue{
-            background-color: #eee;
-          }
-        </style>
         <h1>Binary Search</h1>
         <div id="jsavcontainer">
             <p class="instructLabel">Instructions:</p>
