Removed animations from initialization.

--- a/AV/Development/BST-search-proficiency.html
+++ b/AV/Development/BST-search-proficiency.html
@@ -107,6 +107,8 @@
         av.recorded(); // we are not recording an AV with an algorithm
 
         function initialize() {
+            turnAnimationOff();
+
             if (jsavBinaryTree) {
                 jsavBinaryTree.clear();
             }
@@ -120,8 +122,8 @@
             keyToFind = initialData[JSAV.utils.rand.numKey(Math.floor(nodeNum / 2), nodeNum)];
             $key.html("<li>" + keyToFind + "</li>");
             av.ds.array($key, {indexed: false}).css(0, {"background-color": "#ddf"}).toggleArrow(0);
-            // av.umsg("Find the key " + keyToFind + "."); 
-            av.forward();
+
+            restoreAnimationState();
             
             return jsavBinaryTree;
         }
