Changing List Programming exercise Front end

--- a/Exercises/Development/ListADTPROG.html
+++ b/Exercises/Development/ListADTPROG.html
@@ -118,7 +118,7 @@
 	
       </div>
       <div class="solution" data-type="custom">
-       <div class="guess"> [ "list" ] </div>
+       <div class="guess"> [ $('#codeTextarea').val() ] </div>
         <div class="validator-function">
         
          window.generatedList =  "< "+listel1 +" "+listel2 + " | " + listel3 +" "+listel4+" >";
