Update JSAV to 0.6.0-158; minor exercise updates

--- a/Exercises/Development/ArryLstMCQdelcurr.html
+++ b/Exercises/Development/ArryLstMCQdelcurr.html
@@ -7,13 +7,13 @@
   <script src="../../ODSAkhan-exercises-new/khan-exercise.js"></script>
 </head>
 
-
-
 <body>
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">Given an array-based list implementation, deleting the current element takes how long in the average case?</p>
+      <p class="question">Given an array-based list implementation,
+      deleting the current element takes how long in the average
+      case?</p>
       <div class="solution"><var><code>\Theta(n)</code>  time</var></div>
       <ul class="choices">
 	<li><var><code>\Theta(1)</code> time</var> </li>
