--- a/Exercises/Development/ArryLstMCQdelarb.html
+++ b/Exercises/Development/ArryLstMCQdelarb.html
@@ -11,17 +11,18 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">Given an array-based list implementation, deleting the element at arbitrary position i takes how long in the average case?</p>
+      <p class="question">Given an array-based list implementation,
+      deleting the element at arbitrary position <code>i</code> takes
+      how long in the average case?</p>
       <div class="solution"><var><code>\Theta(n)</code> time</var> </div>
       <ul class="choices">
 	<li><var><code>\Theta(1)</code> time </var> </li>
 	<li><var><code>\Theta(\log n)</code> time</var> </li>
 	<li><var><code>\Theta(n \log n)</code> time</var> </li>	  	 
       </ul>
-	  <div class="hints">
-	   </div>
+      <div class="hints">
+      </div>
     </div> 
-
   </div>
 </div>
 </body>
