Polishing exercises and AVs: Through ListLinked.rst

--- a/Exercises/List/LstLnkdMCQaccs.html
+++ b/Exercises/List/LstLnkdMCQaccs.html
@@ -11,17 +11,17 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">To access the node at position i in a singly-linked list</p>
+      <p class="question">To access the node at
+      position <code>i</code> in a singly-linked list</p>
       <div class="solution"><var>"requires that all its predecessors be visited"</var></div>
       <ul class="choices">
 	<li><var>"takes one  step"</var> </li>
         <li><var>"takes two steps"</var> </li>
-	<li><var>"requires that all its successors be visited"</var></li>	  	 
+	<li><var>"requires that all its successors be visited"</var></li>
       </ul>
-	  <div class="hints">
-	   </div>
+      <div class="hints">
+      </div>
     </div> 
-
   </div>
 </div>
 </body>
