--- a/Exercises/List/LstLnkdMCQadv.html
+++ b/Exercises/List/LstLnkdMCQadv.html
@@ -11,18 +11,18 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">An advantage of linked lists over other list implementations is: </p>
+      <p class="question">An advantage of linked lists over the
+      array-based list implementation is: </p>
       <div class="solution"><var>"expandability"</var></div>
       <ul class="choices">
-	<li><var>"low access cost to arbitrary positions"</var> </li>
-        <li><var>"optimal search speed"</var> </li>
+	<li><var>"low access cost to arbitrary positions"</var></li>
+        <li><var>"optimal search speed"</var></li>
 	<li><var>"zero overhead"</var></li>
-        <li><var>"none of these "</var></li>		  	 
+        <li><var>"none of these"</var></li>
       </ul>
-	  <div class="hints">
-	   </div>
+      <div class="hints">
+      </div>
     </div> 
-
   </div>
 </div>
 </body>
