--- a/Exercises/List/LstLnkdMCQchngcrsr.html
+++ b/Exercises/List/LstLnkdMCQchngcrsr.html
@@ -12,18 +12,18 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">Suppose cursor points to a node in a linked list. Which statement changes cursor so that it points to the next node? </p>
-      <div class="solution"><var><code>cursor = cursor.next; </code></var></div>
+      <p class="question">Suppose cursor points to a node in a linked
+      list. Which statement changes cursor so that it points to the
+      next node? </p>
+      <div class="solution"><var>"cursor = cursor.next;"</var></div>
       <ul class="choices">
-	<li><var><code>cursor++;</code></var> </li>
-        <li><var><code>cursor = next;</code></var> </li>
-	<li><var><code>cursor += next;</code></var></li>
-        <li><var><code>cursor++;</code></var></li>		  	 
+        <li><var>"cursor++;"</var></li>
+        <li><var>"cursor = next;"</var></li>
+        <li><var>"cursor += next;"</var></li>
       </ul>
-	  <div class="hints">
-	   </div>
+      <div class="hints">
+      </div>
     </div> 
-
   </div>
 </div>
 </body>
