--- a/Exercises/List/LstLnkdMCQemptylst.html
+++ b/Exercises/List/LstLnkdMCQemptylst.html
@@ -7,12 +7,12 @@
   <script src="../../ODSAkhan-exercises-new/khan-exercise.js"></script>
 </head>
 
-
 <body>
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">In our linked list implmentation, an empty list contains how many nodes? </p>
+      <p class="question">In our linked list implmentation, an empty
+      list contains how many nodes? </p>
       <div class="solution"><var>"two"</var></div>
       <ul class="choices">
 	<li><var>"zero"</var> </li>
@@ -20,10 +20,9 @@
 	<li><var>"three"</var> </li>
         <li><var>"n"</var> </li>
       </ul>
-	  <div class="hints">
-	   </div>
+      <div class="hints">
+      </div>
     </div> 
-
   </div>
 </div>
 </body>
