--- a/Exercises/List/LstLnkdMCQsuccelm.html
+++ b/Exercises/List/LstLnkdMCQsuccelm.html
@@ -7,22 +7,21 @@
   <script src="../../ODSAkhan-exercises-new/khan-exercise.js"></script>
 </head>
 
-
 <body>
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">In a linked list, the successive elements in the list: </p>
+      <p class="question">In a linked list, the successive elements in
+      the list: </p>
       <div class="solution"><var>"need not occupy contiguous space in memory"</var></div>
       <ul class="choices">
 	<li><var>"must occupy contiguous space in memory"</var> </li>
         <li><var>"must not occupy contiguous space in memory"</var> </li>
-	<li><var>" none of these "</var> </li>
+	<li><var>"none of these"</var> </li>
       </ul>
-	  <div class="hints">
-	   </div>
+      <div class="hints">
+      </div>
     </div> 
-
   </div>
 </div>
 </body>
