--- a/Exercises/Development/ListADTPROG.html
+++ b/Exercises/Development/ListADTPROG.html
@@ -107,7 +107,9 @@
 
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test">Add appropriate lines of code to the following function skeleton so that it make method calls on the List ADT to  create the following list: <b> "&lt;<var>listel1</var> <var>listel2</var> | <var>listel3</var> <var>listel4</var> &gt;" </b> <br>You should assume that L is passed to the function as an empty list.  <br />
+      <p class="problem" id = "test">Add appropriate lines of code to
+      the following function skeleton so that it make method calls on
+      the List ADT to  create the following list: <b> "&lt; <var>listel1</var> <var>listel2</var> | <var>listel3</var> <var>listel4</var> &gt;" </b> <br>You should assume that L is passed to the function as an empty list.  <br />
     </h4>
 
     <textarea  id="codeTextarea">
