--- a/Exercises/List/ArryLstMCQsucc.html
+++ b/Exercises/List/ArryLstMCQsucc.html
@@ -7,22 +7,21 @@
   <script src="../../ODSAkhan-exercises-new/khan-exercise.js"></script>
 </head>
 
-
 <body>
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">In an array-based list, the successive elements in the list:</p>
+      <p class="question">In an array-based list, the successive
+	elements in the list:</p>
       <div class="solution"><var>"must occupy contiguous space in memory"</var> </div>
       <ul class="choices">
 	<li><var>"need not occupy contiguous space in memory"</var></li>
 	<li><var>"must not occupy contiguous space in memory"</var></li>
 	<li><var>"none of these"</var></li>	  	 
       </ul>
-	  <div class="hints">
-	   </div>
+      <div class="hints">
+      </div>
     </div> 
-
   </div>
 </div>
 </body>
