--- a/Exercises/List/ArryLstTFpred.html
+++ b/Exercises/List/ArryLstTFpred.html
@@ -1,29 +1,26 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>OpenDSA List Linked Exercise: Physical Order</title>
+  <title>OpenDSA Array List Exercise: Predecessor Access</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises-new/khan-exercise.js"></script>
-  <script src="../../JSAV/build/JSAV-min.js"></script>
-  <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
 </head>
-
 
 <body>
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="problem">Answer TRUE or FALSE.
-      <p class="question">
-        The physical order in memory for the nodes of a linked list is the same as the order in which the nodes appear in the list.</p>
+      <p class="question"> In an array-based list implementation, to
+      access the predecessor of the current node we must start at the
+      first node in the list.</p>
       <div class="solution"><var>"False"</var></div>
       <ul class="choices" data-category="true">
 	<li><var>"True"</var></li>
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-	
       </div>
     </div>
   </div>
