--- a/Exercises/List/LstLnkdMCQdelarb.html
+++ b/Exercises/List/LstLnkdMCQdelarb.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>OpenDSA Array List Exercise: Insert to Arbitary Position</title>
+  <title>OpenDSA  List Linked Exercise: Delete Arbitrary</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises-new/khan-exercise.js"></script>
@@ -11,18 +11,19 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">Given an array-based list implementation, inserting a new element to
-arbitrary position i takes how long in the average case?</p>
-      <div class="solution"><var><code>\Theta(n)</code></var> time</div>
+      <p class="question">Given a linked list implementation, deleting
+      the element at arbitrary position <code>i</code> takes how long in the
+      average case?</p>
+      <div class="solution"><var><code>\Theta(i)</code> time</var></div>
       <ul class="choices">
 	<li><var><code>\Theta(1)</code> time</var></li>
+        <li><var><code>\Theta(n)</code> time</var></li>
 	<li><var><code>\Theta(\log n)</code> time</var></li>
 	<li><var><code>\Theta(n \log n)</code> time</var></li>	  	 
       </ul>
-	  <div class="hints">
-	   </div>
+      <div class="hints">
+      </div>
     </div> 
-
   </div>
 </div>
 </body>
