--- a/Exercises/List/LstLnkdMCQfndelm.html
+++ b/Exercises/List/LstLnkdMCQfndelm.html
@@ -11,18 +11,19 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">To find an element with value X in a linked list with n nodes requires how many nodes to be visited in the worst case? </p>
-      <div class="solution"><var>"n nodes"</var></div>
+      <p class="question">To find an element with value <code>X</code>
+      in a linked list with <code>n</code> nodes requires how many
+      nodes to be visited in the worst case? </p> 
+      <div class="solution"><var><code>n</code> nodes</var></div>
       <ul class="choices">
 	<li><var>"2 nodes"</var> </li>
-        <li><var>"log n nodes"</var> </li>
+        <li><var><code>\log n</code> nodes</var> </li>
 	<li><var>"1 node"</var></li>
-        <li><var>"n^2 nodes"</var></li>		  	 
+        <li><var><code>n^2</code> nodes</var></li>		  	 
       </ul>
-	  <div class="hints">
-	   </div>
+      <div class="hints">
+      </div>
     </div> 
-
   </div>
 </div>
 </body>
