--- a/Exercises/List/LstLnkdMCQins.html
+++ b/Exercises/List/LstLnkdMCQins.html
@@ -7,23 +7,22 @@
   <script src="../../ODSAkhan-exercises-new/khan-exercise.js"></script>
 </head>
 
-
 <body>
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">In the linked list, where does the insert method place the new entry?</p>
-      <div class="solution"><var>"At the current position." </var> </div>
+      <p class="question">In the linked list, where does the insert
+      method place the new entry?</p>
+      <div class="solution"><var>"At the current position" </var> </div>
       <ul class="choices">
-	<li><var>"At the head." </var></li>
-	<li><var>"At the rear." </var></li>
-	<li><var>" After all other entries that are greater than the new entry."</var></li>
-        <li><var>" After all other entries that are smaller than the new entry."</var></li>	  	 
+	<li><var>"At the head" </var></li>
+	<li><var>"At the rear" </var></li>
+	<li><var>" After all other entries that are greater than the new entry"</var></li>
+        <li><var>" After all other entries that are smaller than the new entry"</var></li>
       </ul>
-	  <div class="hints">
-	  </div>
+      <div class="hints">
+      </div>
     </div> 
-
   </div>
 </div>
 </body>
