--- a/Exercises/List/LstLnkdMCQsm.html
+++ b/Exercises/List/LstLnkdMCQsm.html
@@ -11,17 +11,18 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">Which boolean expression indicates whether the values for nodes p and q are the same? Assume that neither p nor q is null.</p>
-      <div class="solution"><var><code>p.element == q.element</code> </var> </div>
+      <p class="question">Which boolean expression indicates whether
+      the values for nodes p and q are the same? Assume that neither p
+      nor q is null.</p>
+      <div class="solution"><var>"p.element == q.element"</var></div>
       <ul class="choices">
-	<li><var><code>p == q </code></var></li>
-	<li><var><code>p.next == q.next </code></var></li>
-	<li><var>"None of the above."</var></li>	  	 
+	<li><var>"p == q"</var></li>
+	<li><var>"p.next == q.next"</var></li>
+	<li><var>"None of the above."</var></li>
       </ul>
-	  <div class="hints">
-	  </div>
+      <div class="hints">
+      </div>
     </div> 
-
   </div>
 </div>
 </body>
