--- a/Exercises/List/LstLnkdTFpred.html
+++ b/Exercises/List/LstLnkdTFpred.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>OpenDSA Array List Exercise: Predecessor Access</title>
+  <title>OpenDSA List Linked Exercise: Predecessor Access</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises-new/khan-exercise.js"></script>
-  <script src="../../JSAV/build/JSAV-min.js"></script>
-  <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
 </head>
 
 <body>
@@ -14,15 +12,15 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="problem">Answer TRUE or FALSE.
-      <p class="question">
-        In an array-based list implementation, to access the predecessor of the current node we must start at the first node in the list.</p>
-      <div class="solution"><var>"False"</var></div>
+      <p class="question">In a singly linked list implementation, to
+      access the predecessor of the current node we must start at the
+      first node in the list.</p>
+      <div class="solution"><var>"True"</var></div>
       <ul class="choices" data-category="true">
 	<li><var>"True"</var></li>
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-	
       </div>
     </div>
   </div>
