--- a/Exercises/AlgAnal/AlgAnalSumm.html
+++ b/Exercises/AlgAnal/AlgAnalSumm.html
@@ -21,5 +21,11 @@
   <div class="exercise" data-name="AnlsIntroMCQtmcmplx"></div>
   <div class="exercise" data-name="AnlsIntroMCQtmcmplx2"></div>
   <div class="exercise" data-name="AnlsIntroMCQtmcmplx3"></div>
+  <div class="exercise" data-name="AnlsIntroFIBgrthfn10n"></div>
+  <div class="exercise" data-name="AnlsIntroFIBgrthfn20n"></div>
+  <div class="exercise" data-name="AnlsIntroFIBgrthfn2n2"></div>
+  <div class="exercise" data-name="AnlsIntroFIBgrthfn2n"></div>
+  <div class="exercise" data-name="AnlsIntroFIBgrthfn5nlogn"></div>
+  <div class="exercise" data-name="AnlsIntroFIBgrthfnnfact"></div>
 </body>
 </html>
