--- a/Exercises/Background/MthBgFIBstckfnd.html
+++ b/Exercises/Background/MthBgFIBstckfnd.html
@@ -20,7 +20,7 @@
         stock fund. 10 years later the account has a value
         of <var>M</var>,000. Using logarithms and  antilogarithms,
         determine the average annual growth rate for this fund.
-	(Round to the nearest two decimals.) <code>N</code>, <code>n</code>
+	(Round to the nearest two decimals.)
       </p>
       <p class="solution" data-type="text">1.15</p>
       <div class="hints">
