--- a/Exercises/List/listLQueueDequeue.html
+++ b/Exercises/List/listLQueueDequeue.html
@@ -449,6 +449,10 @@ function checkAnswer(arr_size) {
     <div> <!-- Supresses answer box -->
       <p class="problem" id = "test"></p>
       <div class="question">
+	<p>Dequeue a value from the linked queue. First move the
+        correct value to the box shown below the list. Then update any
+        necessary pointers. If a pointer variable needs to be set to
+        null, then click the pointer and then click on the "Make Null" button.</p>
         <input id="reset" type="button" value="Reset" />
         <input id="makenull" type="button" value="Make Null" />
         <div id="jsav" style = "{background-color : #333}"></div>
