--- a/AV/Development/binheapBuildPRO.html
+++ b/AV/Development/binheapBuildPRO.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Heapsort</title>
+    <title>Binary Heap - Build Heap</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
-    <link rel="stylesheet" href="heapsortProficiency.css" />
+    <link rel="stylesheet" href="binheapBuildPRO.css" type="text/css" />
   </head>
   <body>
     <div id="container">
@@ -25,21 +25,19 @@
       </table>
       <form class="avcontainer">
         <div class="jsavcanvas">
-          <p class="instructLabel">Instructions:</p>
-          <p class="instructions">
-            Reproduce the behavior of heapsort for the maximum heap
-            below. You can swap keys by clicking the first one and
-            then the second one in either of the representations
-            (array or binary tree). Begin by swapping the last key
-            with the largest key, and reducing the size of the heap by
-            one (by clicking the "Decrement heap size" button). After
-            that, restore the heap property again.
-          </p>
+	  <p class="instructLabel">Instructions:</p>
+	  <p class="instructions">
+	    In this exercise, your task is to run the build-heap
+	    algorithm on the heap. The min-heap is visualized both as
+	    a binary tree and array and the exercise can be completed
+	    by swapping keys in either visualization. You can swap two
+	    elements by first clicking on one element and then
+	    another.
+	  </p>
           <p id="procontrols">
-            <input id="decrement" type="button" value="Decrement heap size" />
             <span class="jsavscore"></span>
           </p>
-        </div>
+	</div>
       </form>
     </div>
     <script src="../../lib/jquery.min.js"></script>
@@ -50,6 +48,6 @@
     <script src="../../JSAV/extras/binaryheap.js"></script>
     <script src="../../lib/odsaUtils-min.js"></script>
     <script src="../../lib/odsaAV-min.js"></script>
-    <script src="heapsortProficiency.js"></script>
+    <script src="binheapBuildPRO.js"></script>
   </body>
 </html>
