--- a/AV/Development/binheapDeletePRO.html
+++ b/AV/Development/binheapDeletePRO.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Heapsort</title>
+    <title>Binary Heap Delete</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
-    <link rel="stylesheet" href="heapsortProficiency.css" />
+    <link rel="stylesheet" href="binheapDeletePRO.css" type="text/css" />
   </head>
   <body>
     <div id="container">
@@ -15,6 +15,7 @@
             <input type="button" id="help" name="help" value="Help" />
           </td>
           <td class="headerCenter">
+	    <input id="decrement" type="button" value="Decrement heapsize" />
             <p class="jsavexercisecontrols"></p>
           </td>
           <td class="headerRight">
@@ -25,23 +26,25 @@
       </table>
       <form class="avcontainer">
         <div class="jsavcanvas">
-          <p class="instructLabel">Instructions:</p>
-          <p class="instructions">
-            Reproduce the behavior of heapsort for the maximum heap
-            below. You can swap keys by clicking the first one and
-            then the second one in either of the representations
-            (array or binary tree). Begin by swapping the last key
-            with the largest key, and reducing the size of the heap by
-            one (by clicking the "Decrement heap size" button). After
-            that, restore the heap property again.
-          </p>
+	  <p class="instructLabel">Instructions:</p>
+	  <p class="instructions">
+	    Perform DeleteMin three times, and after each deletion,
+	    restore heap property. For each record stored into heap
+	    you can see a key that corresponds to the
+	    priority. "Decrement heap size" -button will delete the
+	    last key of the heap. In addition, by first clicking one
+	    key and then another, you can swap the records.
+	  </p>
           <p id="procontrols">
-            <input id="decrement" type="button" value="Decrement heap size" />
             <span class="jsavscore"></span>
           </p>
-        </div>
+	</div>
       </form>
     </div>
+    <script
+       src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
+    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
     <script src="../../lib/jquery.min.js"></script>
     <script src="../../lib/jquery-ui.min.js"></script>
     <script src="../../JSAV/lib/jquery.transform.light.js"></script>
@@ -50,6 +53,6 @@
     <script src="../../JSAV/extras/binaryheap.js"></script>
     <script src="../../lib/odsaUtils-min.js"></script>
     <script src="../../lib/odsaAV-min.js"></script>
-    <script src="heapsortProficiency.js"></script>
+    <script src="binheapDeletePRO.js"></script>
   </body>
 </html>
