--- a/AV/Development/PrimAVPQ.html
+++ b/AV/Development/PrimAVPQ.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Prim's Algorithm</title>
+  <title>Prim's Algorithm (Priority Queue Version)</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
