--- a/Exercises/AlgAnal/AnlsIntroFIBgrthfnnfact.html
+++ b/Exercises/AlgAnal/AnlsIntroFIBgrthfnnfact.html
@@ -10,7 +10,7 @@
 <body>
 <script>
 function checkAnswer(answer) {
-  if ( answer == "none") {
+  if ( (answer === 2) || (answer === 3)) {
     return true;
   } else {
     return false;
@@ -23,8 +23,8 @@ function checkAnswer(answer) {
     <div id="problem-type-or-description">
       <p class="question"> You are given this set of growth functions:
         <code>n!, 2^n, 2n^2, 5 n \log n, 20n, 10n</code></p>
-      <p>For the growth function <code>n!</code>, type a value (an
-      integer) for which this function is the most efficient of the
+      <p>For the growth function <code>n!</code>, type a value
+	(a positive integer) for which this function is the most efficient of the
       six. If there is no integer value for which it is most
       efficent, type "none".</p>
       <br> <textarea rows="1" cols="9" style="resize:none"  id="answerTextarea" ></textarea></p>
