--- a/Exercises/Background/MthBgSumm.html
+++ b/Exercises/Background/MthBgSumm.html
@@ -15,7 +15,7 @@
   <div class="exercise" data-name="MthBgFIBlgbs1"></div>
   <div class="exercise" data-name="MthBgFIBlgbs2"></div>
   <div class="exercise" data-name="MthBgMCQordr"></div>
-  <div class="exercise" data-name="MthBgFIBstckfnd"></div>
+  <div class="exercise" data-name="MthBgFIBstckfn"></div>
 </body>
 </html>
 
